<resources>
    <string name="app_name">Messenger</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_contacts">Contacts</string>
    <string name="auth_title">Authentication</string>
    <string name="number_hint">Input phone number</string>
    <string name="send">Send</string>
    <string name="verify">Verify</string>
    <string name="resend">Resend</string>
    <string name="code_hint">Input code</string>
    <string name="log_out">Log out</string>
    <string name="exit_summary">Click to exit the application</string>
    <string name="input_name">Input Name</string>
    <string name="input_msg">Input message</string>
    <string name="correspondence">Correspondence</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="user_name_input">Input user name</string>
</resources>