<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.AuthFragment">

    <LinearLayout
        android:id="@+id/linear_number"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_height"
        android:layout_marginTop="@dimen/long_margin"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-26dp">

        <com.hbb20.CountryCodePicker
            android:id="@+id/code_picker"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_height"
            android:background="@color/purple_200"
            app:ccp_autoDetectCountry="true">
        </com.hbb20.CountryCodePicker>

        <EditText
            android:id="@+id/number_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_height"
            android:autofillHints=""
            android:hint="@string/number_hint"
            android:inputType="phone" />

    </LinearLayout>

    <TextView
        android:id="@+id/info_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_height"
        app:layout_constraintTop_toBottomOf="@+id/verify_code"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:id="@+id/linear_buttons"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_height"
        android:layout_marginTop="@dimen/medium_margin"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/info_text"
        tools:layout_editor_absoluteX="1dp">

        <Button
            android:id="@+id/send_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/send" />

        <Button
            android:id="@+id/verify_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/verify"
            android:visibility="visible" />

        <Button
            android:id="@+id/resend_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/resend"
            android:visibility="visible" />
    </LinearLayout>

    <EditText
        android:id="@+id/verify_code"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_height"
        android:layout_marginTop="@dimen/medium_margin"
        android:hint="@string/code_hint"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/linear_number"
        tools:layout_editor_absoluteX="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>